@@ -36,3 +36,16 @@ CREATE TABLE IF NOT EXISTS `custom_transmogrification` (
   `FakeEntry` int(10) unsigned NOT NULL DEFAULT '0',
   PRIMARY KEY (`GUID`)
 ) ENGINE=InnoDB DEFAULT CHARSET=latin1 COMMENT='version 3.0';
+
+-- Updated external mail.
+DROP TABLE IF EXISTS `mail_external`;
+CREATE TABLE `mail_external` (
+ `id` int(10) unsigned NOT NULL auto_increment,
+ `receiver` int(10) unsigned NOT NULL,
+ `subject` varchar(200) default 'Support Message',
+ `message` varchar(200) default '',
+ `money` int(10) unsigned NOT NULL default '0',
+ `item` int(10) unsigned NOT NULL default '0',
+ `item_count` int(10) unsigned NOT NULL default '0',
+ PRIMARY KEY (`id`)
+) ENGINE=MyISAM DEFAULT CHARSET=utf8;
